Fixed Title center alignment on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ p {
 }
 
 @media (max-width: 1028px) {
-    #title {
+    #title .container-fluid {
         text-align: center;
     }
     .iphone-img {
